--- a/Practica/index.html
+++ b/Practica/index.html
@@ -12,7 +12,7 @@
     <h5>quinto titulo</h5>
     <h6>ultimo titulo</h6>
     <p>Con "p" podesmos escribir en Visual Studio</p>
-    <tr><img src="./Practica/Hola_mundo.bash.zenity.png" alt=""></tr>> 
+    <tr><img src="./Hola_mundo.bash.zenity.png" alt=""></tr>> 
 </head>
 <body>
     <ul>
@@ -67,9 +67,9 @@
         
     </table>
     <tr>
-         <b>no</b>  deja poner <i>imagen</i></p>
-        <td><img src="hola.png" alt=""></td> 
-<p style="background-color:chartreuse">NO ME DEJA PONER IMAGEN</p>
+         <b>Ya</b> pude <i> poner imagen</i></p>
+        <td><img src="Hola_mundo.bash.zenity.png" alt=""></td> 
+<p style="background-color:chartreuse">YA PUDE PONER IMAGEN</p>
 <a href="https://www.youtube.com/@revolucion.digital" target="_blanck"> Pagina de Youtubr de Revolucion Digital San Nicolas </a>
 <br>
 <a href="gola-buen-dia.html">Ir a gola buen dia </a>
