--- a/Practica/index.html
+++ b/Practica/index.html
@@ -70,7 +70,7 @@
          <b>Ya</b> pude <i> poner imagen</i></p>
         <td><img src="Hola_mundo.bash.zenity.png" alt=""></td> 
 <p style="background-color:chartreuse">YA PUDE PONER IMAGEN</p>
-<a href="https://www.youtube.com/@revolucion.digital" target="_blanck"> Pagina de Youtubr de Revolucion Digital San Nicolas </a>
+<a href="https://www.youtube.com/@revolucion.digital" target="_blanck"> Pagina de Youtube de Revolucion Digital San Nicolas </a>
 <br>
 <a href="gola-buen-dia.html">Ir a gola buen dia </a>
 </body>
