reincorporacion de carpeta Clase 3

--- a/Practica/index.html
+++ b/Practica/index.html
@@ -13,6 +13,7 @@
     <h6>ultimo titulo</h6>
     <p>Con "p" podesmos escribir en Visual Studio</p>
     <tr><img src="./Hola_mundo.bash.zenity.png" alt=""></tr>> 
+    <img src="./hola.png" alt="">
 </head>
 <body>
     <ul>
@@ -35,7 +36,7 @@
         <tr>
             <td>segunda fila 1</td>
             <td>segunda fila 2</td>
-            <td>tercera fiña 3</td>
+            <td>tercera fila 3</td>
         </tr>
     </table>
 <br>
@@ -73,5 +74,6 @@
 <a href="https://www.youtube.com/@revolucion.digital" target="_blanck"> Pagina de Youtube de Revolucion Digital San Nicolas </a>
 <br>
 <a href="gola-buen-dia.html">Ir a gola buen dia </a>
+<a href="https://www.youtube.com/playlist?list=PLfY4TuiJBrEZmj7uDIE00oaxBQoFoVxPG">youtube</a>
 </body>
 </html>
